--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -1097,10 +1097,10 @@
 													</div>
 												</div>
 
-												<!-- BLOCCO SEDE LEGALE (autocompilato) -->
+												<!-- BLOCCO SEDE -->
 												<div class="item form-group">
 													<label class="control-label col-md-3 col-sm-3 col-xs-12">
-														<span class="label-show" th:text="#{label.sede_legale} + ':'">Sede Legale</span>
+														<span class="label-show" th:text="#{label.sede_valutazione} + ':'">Sede della Valutazione</span>
 													</label>
 												</div>
 												<div class="item form-group">
@@ -1108,7 +1108,7 @@
 														<span class="label-show" th:text="#{label.provincia}">Provincia</span>
 													</label>
 													<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-														<div class="value" th:text="${accreditamentoWrapper.sedeLegale.provincia}"></div>
+														<div class="value" th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.sede.provincia}"></div>
 													</div>
 												</div>
 
@@ -1117,7 +1117,7 @@
 														<span class="label-show" th:text="#{label.comune}">Comune</span>
 													</label>
 													<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-														<div class="value" th:text="${accreditamentoWrapper.sedeLegale.comune}"></div>
+														<div class="value" th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.sede.comune}"></div>
 													</div>
 												</div>
 
@@ -1126,7 +1126,7 @@
 														<span class="label-show" th:text="#{label.indirizzo}">Indirizzo</span>
 													</label>
 													<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-														<div class="value" th:text="${accreditamentoWrapper.sedeLegale.indirizzo}"></div>
+														<div class="value" th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.sede.indirizzo}"></div>
 													</div>
 												</div>
 
